--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#main-container{
+display: flex;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav{
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    padding-left: 100px;
+    padding-right: 20px;
+    padding-top: 100px;
+    background-color: #161f30;
+    height: 100%;
+}
+
+nav span{
+    padding: 10px 10px;
+    margin: 5px 0px;
+    color: white;
+    background-color: #7376f5;
 }
