--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,36 @@
 #main-container{
 display: flex;
+font-family:Arial, Helvetica, sans-serif;
 }
 
 nav{
     display: flex;
     flex-direction: column;
     position: fixed;
-    padding-left: 100px;
-    padding-right: 20px;
-    padding-top: 100px;
+    justify-content: center;
+    width:300px;
     background-color: #161f30;
     height: 100%;
+    top:0;
+    left:0;
+    overflow-x: hidden;
+    
 }
 
 nav span{
-    padding: 10px 10px;
-    margin: 5px 0px;
+    font-size: 30px;
+    align-self:flex-end;
+    margin: 10px 50px 10px 0px;
     color: white;
-    background-color: #7376f5;
+}
+
+nav span:hover{
+    color: orange;
+    cursor: pointer;
+}
+
+#about-section{
+    margin-left: 450px;
+    margin-top: 150px;
+    margin-right: 200px;
 }
