--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -1,19 +1,23 @@
 /*About Styles*/
 .about {
-  top: 0;
   display: flex;
-  height: 100vh;
   flex-direction: column;
-  justify-content: center;
+  flex-wrap: wrap;
   margin-left: 15%;
-  padding: 0px 250px;
+  padding: 50px 250px;
+}
+
+.about-information {
+  background-color: var(--background-color);
+  padding: 40px 30px 60px 30px;
+  border-radius: 30px;
 }
 
 .about-image {
   border-radius: 50%;
   width: 300px;
   margin: 0 auto;
-  padding: 50px;
+  margin-bottom: 50px;
 }
 
 .about h2 {
@@ -26,7 +30,8 @@
   text-align: center;
   color: var(--white-color);
   line-height: 1.5;
-  font-size: 18px;
+  font-size: 20px;
+  letter-spacing: 1.5px;
 }
 
 .about span {
@@ -43,6 +48,16 @@
 }
 
 .about-buttons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   margin-top: 50px;
   text-align: center;
+}
+
+@media screen and (max-width: 1200px) {
+  .about {
+    margin-left: 0;
+    padding: 100px 50px;
+  }
 }
