--- a/src/components/Portfolio/index.css
+++ b/src/components/Portfolio/index.css
@@ -1,16 +1,13 @@
 .portfolio {
-  top: 0;
   display: flex;
-  height: 100%;
+  justify-content: center;
   flex-wrap: wrap;
   margin-left: 15%;
-  padding: 20px 250px;
+  padding: 30px 200px;
 }
 
 .project {
-  display: flex;
-  justify-content: center;
-  margin: 20px 10px;
+  margin: 20px;
   padding: 100px 0px;
   background-color: var(--background-color);
   background-repeat: no-repeat;
@@ -21,26 +18,62 @@
   flex: 0 45%;
 }
 
-.project:hover {
-  cursor: pointer;
-}
-
-.view-project-container {
+.project-information{
   display: flex;
+  flex-direction: column;
+  text-align: center;
   align-items: center;
-  justify-content: center;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  padding: 20px;
-  background-color: var(--light-blue-color);
 }
 
-.view-project-container:hover {
+.project-information-title{
+  background-color: var(--background-color);
+  padding: 20px;
+  margin-bottom: 50px;
+  border-radius: 10px;
+}
+
+.project-information-title h2{
+  font-size: 30px;
+}
+
+.project-information-title p{
+  font-size: 20px;
+}
+
+.project-buttons{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.project-information a{
+  text-decoration: none;
+  color: var(--white-color);
+  background-color: var(--light-blue-color);
+  padding: 20px;
+  margin: 0px 10px;
+}
+
+.project-information a:hover{
   background-color: var(--accent-color);
 }
 
-.view-project-button {
-  text-decoration: none;
-  color: var(--white-color);
+@media screen and (max-width: 1500px) {
+
+  .project {
+    margin: 20px 0px;
+    padding: 100px 0px;
+    flex: 0 100%;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .portfolio {
+    margin-left: 0;
+    padding: 100px 50px;
+  }
+  .project {
+    margin: 20px 0px;
+    padding: 100px 0px;
+    flex: 0 100%;
+  }
 }
