--- a/src/components/Nav/index.css
+++ b/src/components/Nav/index.css
@@ -89,6 +89,13 @@
 
 @media screen and (max-width: 1200px) {
   .nav {
+    position: relative;
+    flex-direction: row;
+    height: auto;
+    width: 100%;
+  }
+  .nav .social-links,
+  .nav .footer-rights{
     display: none;
   }
 }
