--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -55,9 +55,10 @@
   text-align: center;
 }
 
+/*Media Queries*/
 @media screen and (max-width: 1200px) {
   .about {
     margin-left: 0;
-    padding: 100px 50px;
+    padding: 100px 10px;
   }
 }
