--- a/src/components/Contact/index.css
+++ b/src/components/Contact/index.css
@@ -64,6 +64,7 @@
   cursor: pointer;
 }
 
+/*Media Queries*/
 @media screen and (max-width: 1600px) {
   .contact {
     padding: 100px 150px;
@@ -73,6 +74,6 @@
 @media screen and (max-width: 1200px) {
   .contact {
     margin-left: 0%;
-    padding: 100px 50px;
+    padding: 100px 10px;
   }
 }
