--- a/src/components/Portfolio/index.css
+++ b/src/components/Portfolio/index.css
@@ -29,7 +29,7 @@
 .project-information-title {
   background-color: var(--background-color);
   padding: 20px;
-  margin-bottom: 50px;
+  margin: 20px;
   border-radius: 10px;
 }
 
