--- a/src/components/Resume/index.css
+++ b/src/components/Resume/index.css
@@ -1,6 +1,7 @@
 /*Resume Styles*/
 .resume {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: flex-start;
   margin-left: 15%;
@@ -9,15 +10,19 @@
 .resume-info {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   background-color: var(--background-color);
   padding: 30px;
   margin-bottom: 30px;
   border-radius: 10px;
+  text-align: center;
+  padding: 75px;
 }
 .resume-info h2 {
   color: var(--white-color);
   font-size: 50px;
+  padding: 0px;
+  margin: 0px;
 }
 
 .resume-info p {
@@ -39,32 +44,23 @@
   background-color: var(--accent-color);
 }
 
-.resume-bars {
+.skills-lists{
   display: flex;
-  flex-direction: column;
-  width: 90%;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-.resume-bars h2 {
-  background-color: var(--light-blue-color);
-  margin: 10px 0px;
-  padding: 20px;
-  color: var(--white-color);
+.left-list,
+.right-list{
+  margin:0px 50px;
+  max-width: 300px;
+  min-width: 300px;
 }
-
-#f-e {
-  width: 100%;
-}
-
-#cms {
-  width: 77%;
-}
-
-#b-e {
-  width: 80%;
-}
-
-#react {
-  width: 90%;
+.left-list p,
+.right-list p{
+  padding:10px;
+  background-color: var(--main-background-color);
+  border-radius: 10px;
+  font-size: 25px;
 }
 
 /*Media Query*/
